flexy/http/http11_parser.rl.cpp

#line 1 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
/**
 *
 * Copyright (c) 2010, Zed A. Shaw and Mongrel2 Project Contributors.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 *
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *
 *     * Neither the name of the Mongrel2 Project, Zed A. Shaw, nor the names
 *       of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written
 *       permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
 * IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

#include "http11_parser.h"
#include <assert.h>
#include <ctype.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
// #include <dbg.h>

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M, FPC) (parser->M = (FPC)-buffer)
#define PTR_TO(F) (buffer + parser->F)

/** Machine **/

#line 255 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"

/** Data **/

#line 58 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
static const int http_parser_start = 1;
static const int http_parser_first_final = 348;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;

#line 259 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"

int http_parser_init(http_parser *parser) {
    int cs = 0;

#line 71 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
    { cs = http_parser_start; }

#line 263 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
    parser->cs = cs;
    parser->body_start = 0;
    parser->content_len = 0;
    parser->mark = 0;
    parser->nread = 0;
    parser->field_len = 0;
    parser->field_start = 0;
    parser->xml_sent = 0;
    parser->json_sent = 0;

    return (1);
}

/** exec **/
size_t http_parser_execute(http_parser *parser, const char *buffer, size_t len,
                           size_t off) {
    if (len == 0)
        return 0;
    parser->nread = 0;
    parser->mark = 0;
    parser->field_len = 0;
    parser->field_start = 0;

    const char *p, *pe;
    int cs = parser->cs;

    assert(off <= len && "offset past end of buffer");

    p = buffer + off;
    pe = buffer + len;

    assert(pe - p == (int)len - (int)off && "pointers aren't same distance");

#line 111 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
    {
        short _widec;
        if (p == pe)
            goto _test_eof;
        switch (cs) {
            case 1:
                switch ((*p)) {
                    case 60:
                        goto tr2;
                    case 64:
                        goto tr3;
                }
                if ((*p) > 57) {
                    if (65 <= (*p) && (*p) <= 90)
                        goto tr0;
                } else if ((*p) >= 48)
                    goto tr0;
                goto st0;
            st0:
                cs = 0;
                goto _out;
            tr0 :
#line 53 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
                goto st2;
            st2:
                if (++p == pe)
                    goto _test_eof2;
            case 2:
#line 140 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                if ((*p) == 32)
                    goto tr4;
                if ((*p) > 57) {
                    if (65 <= (*p) && (*p) <= 90)
                        goto st175;
                } else if ((*p) >= 48)
                    goto st175;
                goto st0;
            tr4 :
#line 69 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->request_method != NULL)
                    parser->request_method(parser->data, PTR_TO(mark),
                                           LEN(mark, p));
            }
                goto st3;
            st3:
                if (++p == pe)
                    goto _test_eof3;
            case 3:
#line 160 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                _widec = (*p);
                if ((*p) < 123) {
                    if (94 <= (*p) && (*p) <= 94) {
                        _widec = (short)(128 + ((*p) - -128));
                        if (
#line 129 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                            parser->uri_relaxed)
                            _widec += 256;
                    }
                } else if ((*p) > 123) {
                    if (125 <= (*p) && (*p) <= 125) {
                        _widec = (short)(128 + ((*p) - -128));
                        if (
#line 129 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                            parser->uri_relaxed)
                            _widec += 256;
                    }
                } else {
                    _widec = (short)(128 + ((*p) - -128));
                    if (
#line 129 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                        parser->uri_relaxed)
                        _widec += 256;
                }
                switch (_widec) {
                    case 32:
                        goto tr6;
                    case 33:
                        goto tr7;
                    case 35:
                        goto tr8;
                    case 37:
                        goto tr9;
                    case 47:
                        goto tr10;
                    case 59:
                        goto tr7;
                    case 61:
                        goto tr7;
                    case 63:
                        goto tr11;
                    case 64:
                        goto tr7;
                    case 95:
                        goto tr7;
                    case 126:
                        goto tr7;
                    case 606:
                        goto tr7;
                    case 635:
                        goto tr7;
                    case 637:
                        goto tr7;
                }
                if (_widec < 65) {
                    if (36 <= _widec && _widec <= 57)
                        goto tr7;
                } else if (_widec > 90) {
                    if (97 <= _widec && _widec <= 122)
                        goto tr12;
                } else
                    goto tr12;
                goto st0;
            tr6 :
#line 53 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
#line 95 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->request_path != NULL)
                        parser->request_path(parser->data, PTR_TO(mark),
                                             LEN(mark, p));
                }
#line 74 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->request_uri != NULL)
                        parser->request_uri(parser->data, PTR_TO(mark),
                                            LEN(mark, p));
                }
                goto st4;
            tr37 :
#line 95 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->request_path != NULL)
                    parser->request_path(parser->data, PTR_TO(mark),
                                         LEN(mark, p));
            }
#line 74 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->request_uri != NULL)
                        parser->request_uri(parser->data, PTR_TO(mark),
                                            LEN(mark, p));
                }
                goto st4;
            tr43 :
#line 53 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
#line 79 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->fragment != NULL)
                        parser->fragment(parser->data, PTR_TO(mark),
                                         LEN(mark, p));
                }
                goto st4;
            tr46 :
#line 79 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->fragment != NULL)
                    parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
            }
                goto st4;
            tr53 :
#line 84 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(query_start, p);
            }
#line 85 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->query_string != NULL)
                        parser->query_string(parser->data, PTR_TO(query_start),
                                             LEN(query_start, p));
                }
#line 74 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->request_uri != NULL)
                        parser->request_uri(parser->data, PTR_TO(mark),
                                            LEN(mark, p));
                }
                goto st4;
            tr57 :
#line 85 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->query_string != NULL)
                    parser->query_string(parser->data, PTR_TO(query_start),
                                         LEN(query_start, p));
            }
#line 74 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->request_uri != NULL)
                        parser->request_uri(parser->data, PTR_TO(mark),
                                            LEN(mark, p));
                }
                goto st4;
            st4:
                if (++p == pe)
                    goto _test_eof4;
            case 4:
#line 279 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                if ((*p) == 72)
                    goto tr13;
                goto st0;
            tr13 :
#line 53 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
                goto st5;
            st5:
                if (++p == pe)
                    goto _test_eof5;
            case 5:
#line 291 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                if ((*p) == 84)
                    goto st6;
                goto st0;
            st6:
                if (++p == pe)
                    goto _test_eof6;
            case 6:
                if ((*p) == 84)
                    goto st7;
                goto st0;
            st7:
                if (++p == pe)
                    goto _test_eof7;
            case 7:
                if ((*p) == 80)
                    goto st8;
                goto st0;
            st8:
                if (++p == pe)
                    goto _test_eof8;
            case 8:
                if ((*p) == 47)
                    goto st9;
                goto st0;
            st9:
                if (++p == pe)
                    goto _test_eof9;
            case 9:
                if ((*p) == 49)
                    goto st10;
                goto st0;
            st10:
                if (++p == pe)
                    goto _test_eof10;
            case 10:
                if ((*p) == 46)
                    goto st11;
                goto st0;
            st11:
                if (++p == pe)
                    goto _test_eof11;
            case 11:
                if (48 <= (*p) && (*p) <= 49)
                    goto st12;
                goto st0;
            st12:
                if (++p == pe)
                    goto _test_eof12;
            case 12:
                switch ((*p)) {
                    case 10:
                        goto tr21;
                    case 13:
                        goto tr22;
                }
                goto st0;
            tr21 :
#line 90 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->http_version != NULL)
                    parser->http_version(parser->data, PTR_TO(mark),
                                         LEN(mark, p));
            }
                goto st13;
            tr30 :
#line 61 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
#line 63 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start),
                                           parser->field_len, PTR_TO(mark),
                                           LEN(mark, p));
                    }
                }
                goto st13;
            tr33 :
#line 63 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start),
                                       parser->field_len, PTR_TO(mark),
                                       LEN(mark, p));
                }
            }
                goto st13;
            st13:
                if (++p == pe)
                    goto _test_eof13;
            case 13:
#line 375 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                switch ((*p)) {
                    case 10:
                        goto tr24;
                    case 13:
                        goto tr25;
                    case 33:
                        goto tr23;
                    case 124:
                        goto tr23;
                    case 126:
                        goto tr23;
                }
                if ((*p) < 42) {
                    if ((*p) < 11) {
                        if (1 <= (*p) && (*p) <= 8)
                            goto tr23;
                    } else if ((*p) > 31) {
                        if (35 <= (*p) && (*p) <= 39)
                            goto tr23;
                    } else
                        goto tr23;
                } else if ((*p) > 43) {
                    if ((*p) < 48) {
                        if (45 <= (*p) && (*p) <= 46)
                            goto tr23;
                    } else if ((*p) > 57) {
                        if ((*p) > 90) {
                            if (94 <= (*p) && (*p) <= 122)
                                goto tr23;
                        } else if ((*p) >= 65)
                            goto tr23;
                    } else
                        goto tr23;
                } else
                    goto tr23;
                goto st0;
            tr23 :
#line 56 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(field_start, p);
            }
                goto st14;
            st14:
                if (++p == pe)
                    goto _test_eof14;
            case 14:
#line 415 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                switch ((*p)) {
                    case 33:
                        goto st14;
                    case 58:
                        goto tr27;
                    case 124:
                        goto st14;
                    case 126:
                        goto st14;
                }
                if ((*p) < 42) {
                    if ((*p) < 10) {
                        if (1 <= (*p) && (*p) <= 8)
                            goto st14;
                    } else if ((*p) > 31) {
                        if (35 <= (*p) && (*p) <= 39)
                            goto st14;
                    } else
                        goto st14;
                } else if ((*p) > 43) {
                    if ((*p) < 48) {
                        if (45 <= (*p) && (*p) <= 46)
                            goto st14;
                    } else if ((*p) > 57) {
                        if ((*p) > 90) {
                            if (94 <= (*p) && (*p) <= 122)
                                goto st14;
                        } else if ((*p) >= 65)
                            goto st14;
                    } else
                        goto st14;
                } else
                    goto st14;
                goto st0;
            tr27 :
#line 57 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                parser->field_len = LEN(field_start, p);
            }
                goto st15;
            tr29 :
#line 61 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
                goto st15;
            st15:
                if (++p == pe)
                    goto _test_eof15;
            case 15:
#line 460 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                switch ((*p)) {
                    case 0:
                        goto st0;
                    case 9:
                        goto tr29;
                    case 10:
                        goto tr30;
                    case 13:
                        goto tr31;
                    case 32:
                        goto tr29;
                    case 127:
                        goto st0;
                }
                goto tr28;
            tr28 :
#line 61 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
                goto st16;
            st16:
                if (++p == pe)
                    goto _test_eof16;
            case 16:
#line 478 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                switch ((*p)) {
                    case 0:
                        goto st0;
                    case 10:
                        goto tr33;
                    case 13:
                        goto tr34;
                    case 127:
                        goto st0;
                }
                goto st16;
            tr22 :
#line 90 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->http_version != NULL)
                    parser->http_version(parser->data, PTR_TO(mark),
                                         LEN(mark, p));
            }
                goto st17;
            tr31 :
#line 61 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(mark, p);
            }
#line 63 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->http_field != NULL) {
                        parser->http_field(parser->data, PTR_TO(field_start),
                                           parser->field_len, PTR_TO(mark),
                                           LEN(mark, p));
                    }
                }
                goto st17;
            tr34 :
#line 63 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->http_field != NULL) {
                    parser->http_field(parser->data, PTR_TO(field_start),
                                       parser->field_len, PTR_TO(mark),
                                       LEN(mark, p));
                }
            }
                goto st17;
            st17:
                if (++p == pe)
                    goto _test_eof17;
            case 17:
#line 515 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl.cpp"
                if ((*p) == 10)
                    goto st13;
                goto st0;
            tr24 :
#line 56 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                MARK(field_start, p);
            }
#line 100 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
                {
                    if (parser->xml_sent || parser->json_sent) {
                        parser->body_start = PTR_TO(mark) - buffer;
                        // +1 includes the \0
                        parser->content_len =
                            p - buffer - parser->body_start + 1;
                    } else {
                        parser->body_start = p - buffer + 1;

                        if (parser->header_done != NULL) {
                            parser->header_done(parser->data, p + 1,
                                                pe - p - 1);
                        }
                    }
                    {
                        p++;
                        cs = 348;
                        goto _out;
                    }
                }
                goto st348;
            tr36 :
#line 100 "/home/kangjinci/cpp/src/github.com/4kangjc/flexy/flexy/http/http11_parser.rl"
            {
                if (parser->xml_sent || parser->json_sent) {
                    parser->body_start = PTR_TO(mark) - buffer;
                    // +1 includes the \0
                    parser->content_len = p - buffer - parser->body_start + 1;
                } else {
                    parser->body_start = p - buffer + 1;
